# RK_DOA

./: .README.swp  .gitignore  CMakeLists.txt  README  README.md  RK_config  adb_run  build_pro  cc.hpp  main.cpp  main.hpp  record_labelled_dataset  record_labelled_dataset.sh  rk_doa_run  run_pro  wave.cpp  wave.h
Application/inc/: AlsaCaptureAudio.h  WaveSignalProcess.hpp  wav_decode.hpp
Application/src/: AlsaCaptureAudio.cpp  WaveSignalProcess.cpp  visualize.cpp  wav_decode.cpp
MATH/inc/: GCC.hpp  LowPassFilter.hpp  MUSIC.hpp  kalman.hpp  zo-gcc-phat.hpp
MATH/src/: LowPassFilter.cpp  MUSIC.cpp  kalman.cpp  zo-fft-fftw.cpp  zo-gcc-phat.cpp
Release/: RK_config  asound.conf  rk_doa_run  visualize_qt
doa_inc/: WaveSignalProcess.hpp  visualize.hpp  visulaize.hpp  wav_decode.hpp
doa_src/: GCC.cpp  LowPassFilter.cpp  WaveSignalProcess.cpp  visualize.cpp  wav_decode.cpp
include/: cc.hpp
only_record/: CMakeLists.txt  main.cpp
sound_data/: angles.txt
sound_data/FYP_report/: CO_index.txt  data_doa_raw.txt  data_final_filtered.txt  first_angle.txt  second_angle.txt  vad_index.txt
visualize_qt/: Makefile  angles.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_mainwindow.cpp  ui_mainwindow.h  visualize_qt  visualize_qt.pro
